# riptide_core

./: .gitignore  README.md  frames_2024-10-12_17.54.29.gv  frames_2024-10-12_18.09.06.gv
log/: latest_deploy
riptide_acoustics/: CMakeLists.txt  package.xml
riptide_acoustics/include/: localization_node.hpp
riptide_acoustics/include/riptide_acoustics/: AcousticsMeasurement.h
riptide_acoustics/launch/: acoustics.launch.py
riptide_acoustics/src/: Acoustics.cpp  AcousticsMeasurement.cpp  Acoustics_Helper.py  localization_node.cpp
riptide_acoustics/src/Acoustics_Initial_Development/Acoustics/: Acoustics.SLDPRT  acoustics.m  acoustics_two_pulse_accurary.m  solve_two_pulse_system.m  solve_two_pulse_system_depth.asv  solve_two_pulse_system_depth.m  transform.m  untitled.asv
riptide_acoustics/src/UndeterminantMethod/: UndeterminantNode.asv  UndeterminantNode.m  calculate_distance_from_solve.asv  calculate_distance_from_solve.m  estimate_pinger_position.asv  estimate_pinger_position.m  untitled2.asv  untitled2.m
riptide_acoustics/src/matlab/: AcousticsNode.asv  AcousticsNode.m  GetTimingDIfference.asv  GetTimingDIfference.m  generatte_test_cases.asv  generatte_test_cases.m  parse_measurements.asv  parse_measurements.m  run_measurements_from_csv.asv  run_measurements_from_csv.m  solve_two_pulse_system_depth.asv  solve_two_pulse_system_depth.m  two_pulse_depth_test.m
riptide_acoustics/src/matlab/data/: test1.csv  test2.csv  test3.csv
riptide_descriptions/: generateConstants.py  package.xml
riptide_descriptions/config/: liltank.yaml  puddles.yaml  simulator.yaml  talos.yaml  tempest.yaml
riptide_descriptions/meshes/: LilTank.dae  Puddles.dae
riptide_descriptions/resources/: export_constants_to_simulink.py  generateConstants.py
riptide_descriptions/robots/: liltank.xacro  puddles.xacro  talos.xacro
riptide_descriptions/urdf/: robot_actuators.xacro  robot_base.xacro  robot_sensors.xacro  snippets.xacro
riptide_diagnostics/: CMakeLists.txt  package.xml
riptide_diagnostics/riptide_diagnostics/: diagnostic_app.js  diagnostics.py  diagnostics_view.html
riptide_gyro/: CMakeLists.txt  package.xml
riptide_gyro/config/: gyro_config.yaml
riptide_gyro/include/riptide_gyro/: arduino_library.hpp  gyro_base.hpp  serial_library.hpp  testing.hpp
riptide_gyro/launch/: gyro.launch.py  gyro_bench.launch.py
riptide_gyro/src/riptide_gyro/: driver.cpp
riptide_gyro/src/riptide_gyro/serial_library/: LinuxSerialTransceiver.cpp  SerialProcessor.cpp  util.cpp
riptide_gyro/src/serial_library/: LinuxSerialTransceiver.cpp  SerialProcessor.cpp  util.cpp
riptide_gyro/test/riptide_gyro/: ExecuteTests.cpp  LinuxTransceiverTest.cpp  RosTest.cpp  SerialProcessorTests.cpp  TestArduinoLib.cpp  Type1SerialProcessorTest.cpp  Type2SerialProcessorTest.cpp
riptide_gyro/test/riptide_gyro/serial_library/: TestLinuxSerialTransceiver.cpp  TestSerialProcessor.cpp  TestUtil.cpp
riptide_hardware/: CMakeLists.txt  package.xml  setup.py
riptide_hardware/cfg/: dfc_config.yaml  diagnostic_analyzers.yaml  diagnostic_thresholds.yaml  ekf_config.yaml  ffc_config.yaml  imu_pwr_cycle.yaml  liltank_ekf.yaml  puddles_ekf.yaml  talos_ekf.yaml  talos_ekf_tag_odom.yaml  tank_ffc_config.yaml  vectornav_imu_config.yaml  zed_common.yaml  zed_compression.yaml
riptide_hardware/launch/: apriltag.launch.py  copro_agent.launch.py  diagnostics.launch.py  fake_ivc.launch.py  fake_nav.launch.py  hardware.launch.py  hardware_fake_dvl.launch.py  imu.launch.py  nav_no_ekf.launch.py  navigation.launch.py  underwater_camera.launch.py  webcam_republish.launch.py  zed.launch.py
riptide_hardware/riptide_hardware2/: actuator_service_translator.py  alternateThruster.py  alternate_thruster.py  common.py  computer_monitor.py  depth_converter.py  electrical_monitor.py  fake_dvl.py  fake_ekf.py  fake_ivc.py  firmware_monitor.py  imu_power_cycle.py  picture_taker.py  pose_converter.py  pressure_monitor.py  pvt_monitor.py  rpm_echo.py  sensor_monitor.py  simple_actuator_interface.py  tag_odom.py  voltage_monitor.py  zed_manager.py
riptide_hardware/src/: depth_converter.cpp  ekf.cpp
riptide_imu/: CMakeLists.txt  package.xml
riptide_imu/config/: vectornav.yaml
riptide_imu/include/: serialinterface.hpp
riptide_imu/launch/: imu.launch.py
riptide_imu/src/: main.cpp
riptide_imu/vnproglib-1.2.0.0/cpp/src/: event.cpp:Zone.Identifier
riptide_msgs/: CMakeLists.txt
riptide_msgs/action/: ActivateTeleop.action  CalibrateDragNew.action  CalibrateThruster.action  Depressurize.action  FollowPath.action  TareGyro.action
riptide_msgs/msg/: ActuatorStatus.msg  BatteryStatus.msg  DshotCommand.msg  DshotPartialTelemetry.msg  DshotRPMFeedback.msg  DshotSingleTelemetry.msg  ElectricalReadings.msg  FirmwareStatus.msg  GyroStatus.msg  ImageArray.msg  ImuConfig.msg  LedCommand.msg  MappingTargetInfo.msg  UInt8Stamped.msg  VnDump.msg  VnVpeStatus.msg
riptide_msgs/srv/: MappingTarget.srv  PlanPath.srv  SendOpboxNotification.srv
